Trying to slim down the docker image by removing unused debian packages. It only saves about 22mb, so not worth much, but hey.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.2'
 services:
     elasticsearch:
-        image: budney/elasticsearch
+        image: budney/elasticsearch-pi
         container_name: elasticsearch
         restart: unless-stopped
         environment:
